--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,17 +1,17 @@
 <h2>
-  <%= link_to 'Add New',new_post_path, class:'header-menu' %>
-  My Posts</h2>
+  <%= link_to 'アニメの追加',new_post_path, class:'header-menu' %>
+  アニメ紹介</h2>
 <ul>
   <% @posts.each do |post| %>
   <li>
     <%= link_to post.title, post_path(post)%>
-    <%= link_to '[Edit]',edit_post_path(post), class: 'command' %>
-    <!--postのid渡している-->
     <%= link_to '[x]',
     post_path(post),
     method: :delete,
     class: 'command',
     data: {confirm: 'Sure?'} %>
-    
+    <%= link_to '[Edit]',edit_post_path(post), class: 'command' %>
+    <!--postのid渡している-->
+  </li>
   <%end%>
 </ul>
