--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_for @post do |f| %>
 <p>
-  <%= f.text_field :title,placeholder: 'enter title' %>
+  <%= f.text_field :title,placeholder: 'タイトル' %>
   <% if @post.errors.messages[:title].any? %>
   <span class="error"><%= @post.errors.messages[:title][0]%></span>
   <% end %>
 </p>
 <p>
-  <%= f.text_area :body,placeholder: 'enter body text' %>
+  <%= f.text_area :body,placeholder: 'あらすじ' %>
   <% if @post.errors.messages[:body].any? %>
   <span class="error"><%= @post.errors.messages[:body][0]%></span>
   <% end %>
