--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 <p><%= simple_format@post.body %></p>
 <!--R20改行なおすsimple_format-->
 
-<h3>Comments</h3>
+<h3>評価コメント</h3>
 
 <!--postのコメント-->
 <% if @post.comments.any? %>
