--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,3 +15,9 @@
   </li>
   <%end%>
 </ul>
+<div class='bottom_message'>
+  <p>※上の[x]押して消さないでください。</a>
+</div>
+<div>
+  <p>アニメの追加<br>各アニメの名言を追加してね。</p>
+</div>
