--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
 
   <body>
     <div class="container">
-    <h1><%= link_to image_tag('logo.png',class: 'logo') , root_path%></h1>
+    <h1><%= link_to image_tag('anime1.png',class: 'logo') , root_path%></h1>
     <%= yield %>
+    <p><%= link_to 'ホームへ戻る', root_path%></p>
     </div>
   </body>
 </html>
